# python-tool-testing-pip-audit

./: .gitignore  METRICS_COVERAGE.md  README.md  TESTING_TEAM.md  TRIGGER.md  dashboard_metrics.json  metrics.json  pip_audit.json  pip_audit_metrics.py  pip_audit_report.json  pip_audit_trigger.py  pyproject.toml  requirements.txt  run_pip_audit_analysis.ps1  run_tests.ps1  run_trigger.ps1  run_trigger.sh  testable_dashboard.json  validate_metric_coverage.py  verify_100_percent.ps1  verify_pip_audit_json.ps1
.github/workflows/: pip-audit-100.yml
artifacts/training/: baseline_pip_audit.json  dependency_tree.json  licenses.json  pip_audit_report.json
config/: execution_trigger.json  golden_baseline_pip_audit.json  metric_coverage.json  platform_trigger.json  target_repo.json
pip_audit_platform/: __init__.py  __main__.py  cli.py
pip_audit_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
platform/: pip_audit_metrics.json  pip_audit_report.json  platform_metrics.json  sca_metric_evidence.json  testable_dashboard.json
sample_subject/: requirements.txt
sample_subject/app/: main.py
scripts/: collect_artifacts.py  enrich_pip_audit_output.py  export_platform_bundle.py  platform_pip_audit_fixup.py  verify_100_percent.py  verify_pip_audit_json.py
tests/: test_integration_pipeline.py  test_metric_coverage.py  test_pip_audit_json.py  test_pip_audit_metrics.py  test_platform_fixup.py  test_trigger.py
